# lumiere

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
lumiere/: __init__.py  cli.py
lumiere/core/: config.py  models.py  scanner.py
lumiere/reports/: html.py  markdown.py
lumiere/sources/: imdb.py  rottentomatoes.py  tmdb.py
lumiere/web/: app.py
sample_output/: sample_report.md
tests/: test_filter.py  test_models.py
